examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/check_inr_reconstruct.st
language core;

extend with #type-reconstruction, #sum-types;


fn main(succeed : Bool) -> Nat+Bool {
  return inr(0)
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
